--- a/first-network/base/docker-compose-base.yaml
+++ b/first-network/base/docker-compose-base.yaml
@@ -16,7 +16,9 @@ services:
         - ../channel-artifacts/genesis.block:/var/hyperledger/orderer/orderer.genesis.block
         - ../crypto-config/ordererOrganizations/example.com/orderers/orderer.example.com/msp:/var/hyperledger/orderer/msp
         - ../crypto-config/ordererOrganizations/example.com/orderers/orderer.example.com/tls/:/var/hyperledger/orderer/tls
-        - orderer.example.com:/var/hyperledger/production/orderer
+        # - orderer.example.com:/var/hyperledger/production/orderer
+        - /private/var/hyperledger/orderer.example.com:/var/hyperledger/production/orderer
+
     ports:
       - 7050:7050
 
@@ -38,7 +40,8 @@ services:
         - /var/run/:/host/var/run/
         - ../crypto-config/peerOrganizations/org1.example.com/peers/peer0.org1.example.com/msp:/etc/hyperledger/fabric/msp
         - ../crypto-config/peerOrganizations/org1.example.com/peers/peer0.org1.example.com/tls:/etc/hyperledger/fabric/tls
-        - peer0.org1.example.com:/var/hyperledger/production
+        # - peer0.org1.example.com:/var/hyperledger/production
+        - /private/var/hyperledger/peer0.org1.example.com:/var/hyperledger/production
     ports:
       - 7051:7051
 
@@ -60,7 +63,8 @@ services:
         - /var/run/:/host/var/run/
         - ../crypto-config/peerOrganizations/org1.example.com/peers/peer1.org1.example.com/msp:/etc/hyperledger/fabric/msp
         - ../crypto-config/peerOrganizations/org1.example.com/peers/peer1.org1.example.com/tls:/etc/hyperledger/fabric/tls
-        - peer1.org1.example.com:/var/hyperledger/production
+        # - peer1.org1.example.com:/var/hyperledger/production
+        - /private/var/hyperledger/peer1.org1.example.com:/var/hyperledger/production
 
     ports:
       - 8051:8051
@@ -83,7 +87,8 @@ services:
         - /var/run/:/host/var/run/
         - ../crypto-config/peerOrganizations/org2.example.com/peers/peer0.org2.example.com/msp:/etc/hyperledger/fabric/msp
         - ../crypto-config/peerOrganizations/org2.example.com/peers/peer0.org2.example.com/tls:/etc/hyperledger/fabric/tls
-        - peer0.org2.example.com:/var/hyperledger/production
+        # - peer0.org2.example.com:/var/hyperledger/production
+        - /private/var/hyperledger/peer0.org2.example.com:/var/hyperledger/production
     ports:
       - 9051:9051
 
@@ -105,6 +110,7 @@ services:
         - /var/run/:/host/var/run/
         - ../crypto-config/peerOrganizations/org2.example.com/peers/peer1.org2.example.com/msp:/etc/hyperledger/fabric/msp
         - ../crypto-config/peerOrganizations/org2.example.com/peers/peer1.org2.example.com/tls:/etc/hyperledger/fabric/tls
-        - peer1.org2.example.com:/var/hyperledger/production
+        # - peer1.org2.example.com:/var/hyperledger/production
+        - /private/var/hyperledger/peer1.org2.example.com:/var/hyperledger/production
     ports:
       - 10051:10051
