--- a/egg-example/.gitignore
+++ b/egg-example/.gitignore
@@ -15,12 +15,12 @@ typings/
 app/fabric/bin/
 
 
-#以下文件可以通过接口/init/init_generate生成
+#以下文件可以通过接口/init/generate生成
 app/fabric/first-network/connection-*
 app/fabric/first-network/docker-compose-e2e.yaml
 app/fabric/first-network/channel-artifacts/*.tx
 app/fabric/first-network/channel-artifacts/*.block
 app/fabric/first-network/crypto-config/
-#以上文件可以通过接口/init/init_generate生成
+#以上文件可以通过接口/init/generate生成
 
 
